getting ordained char sheet to work with bootstrap.

--- a/views/edit-held/liturgien.jade
+++ b/views/edit-held/liturgien.jade
@@ -19,22 +19,29 @@ html(lang="de")
 			input[type='number']:disabled {
 				background-color:	#ddd;
 			}
+			label {
+				font-weight: 		normal;
+			}
 			.dcm-gap-bottom {
-				margin-bottom:    1em;
+				margin-bottom:    	1em;
+			}
+			#template {
+				display: 			none;
+			}
+			.selected label {
+				font-weight: 		bold;
+				font-variant: 		small-caps;
+				font-family:		serif;
+			}
+			#lit li:hover {
+				background-color:	#eee;
 			}
 		//-style.
-			#lit .selected label {
-				font-weight: bold;
-				font-variant: small-caps;
-			}
 			tbody tr:hover {
 				background-color: silver;
 			}
 			input {
 				text-align: inherit;
-			}
-			#template {
-				display: none;
 			}
 	body#top
 		include inc/nav
@@ -44,10 +51,10 @@ html(lang="de")
 			form(action="/liturgien/"+_Held._id, method="post", accept-charset="utf-8")
 				input(type="hidden", name="_method", value="put")
 				
-				section#lkw.panel.panel-default
+				section#lkw.panel.panel-default.text-center
 					.panel-heading.dcm-caption Liturgiekenntnis
 					.panel-body
-						//-.container-fluid.text-center.dcm-gap-bottom
+						.container-fluid.dcm-gap-bottom
 							.row.dcm-row
 								.col-xs-6
 									.dcm-header.dcm-border Gottheit
@@ -55,73 +62,31 @@ html(lang="de")
 									.dcm-header.dcm-border Lern
 								.col-xs-3
 									.dcm-header.dcm-border LkW
-						.container-fluid.text-center
-							.row.dcm-row
-								.col-xs-1
-									input(type="checkbox")
-								.col-xs-5.text-left 
-									label Boron
-								.col-xs-3
-									select(size="1")
-										each __kat in ["A+", "A", "B", "C", "D", "E", "F", "G", "H"]
-											option=__kat
-								.col-xs-3
-									input(type="number")
+						#collection.container-fluid
+							if _Held.Weihe && _Held.Weihe.Liturgiekenntnis && _Held.Weihe.Liturgiekenntnis.length
+								each __lk, __idx in _Held.Weihe.Liturgiekenntnis
+									.row.dcm-row
+										.col-xs-1
+											input.unlock(type="hidden", name="Weihe.Liturgiekenntnis[#{__idx}][_talent]", value=__lk._talent._id)
+											input.isactive(type="checkbox", name="Weihe.Liturgiekenntnis[#{__idx}][name]", value=__lk.name, id="lk"+__idx, checked)
+										.col-xs-5.text-left 
+											label(for="lk"+__idx)=__lk.name
+										.col-xs-3
+											select.unlock(size="1", name="Weihe.Liturgiekenntnis[#{__idx}][Lernstufe]")
+												each __kat in ["A+", "A", "B", "C", "D", "E", "F", "G", "H"]
+													option(selected=(__lk.Lernstufe === __kat))=__kat
+										.col-xs-3
+											input.unlock(type="number", name="Weihe.Liturgiekenntnis[#{__idx}][wert]", min="3", max="35", step="1", value=__lk.wert)
 					.panel-footer
-						select(size="1")
-							each __list, __typ in _Dropdown.Götter
-								optgroup(label=__typ)
-									each __gott in __list
-										option(value=__gott)=__gott
+						.row
+							.col-xs-5.col-xs-offset-1
+								select#newlk(size="1")
+									// inserts _id quoted
+									each __lk in _Gottheiten
+										option(value=__lk._id)=__lk.name
+							.col-xs-3.col-xs-offset-3
+								button(type="button")#addlk.btn.btn-default.fa.fa-plus
 
-					//table.data-section.eigenschaften#lkw
-						caption Liturgiekenntnis
-						colgroup
-							col(style="width: 2em;")
-							col
-							col(span="2", style="width: 15em;")
-						thead
-							tr
-								td
-								th Gottheit
-								th Lern
-								th TaW
-						tfoot
-							tr
-								td
-								td 
-									select#newlk(size="1", style="width: 25%;")
-										each __lk in _gottheiten
-											option(value=__lk.name, data-id=String(__lk._id).replace(/\W+/g, ''))=__lk.name
-								td.mitte(colspan="2")
-									button#addlk(type="button") neue Liturgiekenntnis
-						tbody#template
-							tr
-								td.mitte(style="padding: 0.2em;")
-									input.unlock(type="hidden", name="Weihe.Liturgiekenntnis[{index}][_talent]", value="{id}")
-									input.isactive(type="checkbox", name="Weihe.Liturgiekenntnis[{index}][name]", value="{name}", id="lk{index}", checked)
-								td
-									label(for="lk{index}") {name}
-								td.mitte
-									select.unlock(size="1", name="Weihe.Liturgiekenntnis[{index}][Lernstufe]")
-										each kat in ["A+", "A", "B", "C", "D", "E", "F", "G", "H"]
-											option= kat
-								td.mitte
-									input.unlock(type="number", name="Weihe.Liturgiekenntnis[{index}][wert]", min="3", max="35", step="1", value="3")
-						tbody#collection
-							each __lk, key in _held.Weihe.Liturgiekenntnis
-								tr
-									td.mitte(style="padding: 0.2em;")
-										input.unlock(type="hidden", name="Weihe.Liturgiekenntnis[#{key}][_talent]", value=__lk._talent._id)
-										input.isactive(type="checkbox", name="Weihe.Liturgiekenntnis[#{key}][name]", value=__lk.name, id="lk"+key, checked)
-									td
-										label(for="lk"+key)= __lk.name
-									td.mitte
-										select.unlock(size="1", name="Weihe.Liturgiekenntnis[#{key}][Lernstufe]")
-											each kat in ["A+", "A", "B", "C", "D", "E", "F", "G", "H"]
-												option(selected=__lk.Lernstufe === kat)= kat
-									td.mitte
-										input.unlock(type="number", name="Weihe.Liturgiekenntnis[#{key}][wert]", min="3", max="35", step="1", value=__lk.wert)
 				section#lit.panel.panel-default
 					.panel-heading.dcm-caption Liturgien
 					ul.list-group
@@ -129,49 +94,32 @@ html(lang="de")
 						each __lit, __idx in _Liturgien
 							- var __isAvailable  = isAvailable(_Held.Weihe.Liturgien, __lit)
 							li.list-group-item
-								.row
-									.col-xs-1
+								.row(class=__isAvailable ? 'selected' : '')
+									.col-xs-2.col-sm-1.text-center
 										input.unlock(type="hidden", name="Weihe.Liturgien[#{__idx}]", value=__lit._id, disabled=!__isAvailable)
 										input.isactive(type="checkbox", id="Liturgie_"+__idx, checked=__isAvailable)
-									.col-xs-11
-										label(for="Liturgie_"+__idx)=__lit.name + " ("+__grad[__lit.grad]+")"
-									.col-xs-3=__lit.rd
-									.col-xs-3=__lit.ziel
-									.col-xs-3=__lit.rw
-									.col-xs-3=__lit.wd
+									.col-xs-10.col-sm-11.col-md-4
+										label(for="Liturgie_"+__idx, title=__lit.typ.join(', '))=__lit.name + " ("+__grad[__lit.grad]+")"
+									.col-xs-3.col-xs-offset-1.col-md-2.col-md-offset-0=__lit.rd
+									.col-xs-2.col-md-1=__lit.ziel
+									.col-xs-3.col-md-2=__lit.rw
+									.col-xs-3.col-md-2=__lit.wd
 
-
-					//table.data-section.mitte.eigenschaften#lit
-						caption Liturgien
-						colgroup
-							col(style="width: 4em;")
-							col
-							col(style="width: 12em")
-							col(style="width: 6em;")
-							col(span="2", style="width: 12em")
-						thead
-							tr
-								td
-								th Liturgie
-								th Dauer
-								th Ziel
-								th Reichweite
-								th Wirkungsdauer
-						tbody
-							- var __grad = {1:"I", 2:"II", 3:"III", 4:"IV", 5:"V", 6:"VI", 7:"VII"}
-							each __lit, __idx in _liturgien
-								- var __isAvailable  = isAvailable(_held.Weihe.Liturgien, __lit)
-								tr(class=__isAvailable?'selected':'')
-									td
-										input.unlock(type="hidden", name="Weihe.Liturgien[#{__idx}]", value=__lit._id, disabled=!__isAvailable)
-										input.isactive(type="checkbox", id="Liturgie_"+__idx, checked=__isAvailable)
-									td.links
-										label(for="Liturgie_"+__idx)=__lit.name + " ("+__grad[__lit.grad]+")"
-									td=__lit.rd
-									td=__lit.ziel
-									td=__lit.rw
-									td=__lit.wd
 				#save.row.well
 					.col-xs-6.col-xs-offset-3.col-sm-4.col-sm-offset-4.text-center
 						button.btn.btn-success.form-control(type="submit", disabled) speichern
-		//script(src="/edit-liturgie.js")
+		
+		aside#template
+			.row.dcm-row
+				.col-xs-1
+					input.unlock(type="hidden", name="Weihe.Liturgiekenntnis[{index}][_talent]", value="{id}")
+					input.isactive(type="checkbox", name="Weihe.Liturgiekenntnis[{index}][name]", value="{name}", id="lk{index}", checked)
+				.col-xs-5.text-left 
+					label(for="lk{index}") {name}
+				.col-xs-3
+					select.unlock(size="1", name="Weihe.Liturgiekenntnis[{index}][Lernstufe]")
+						each __kat in ["A+", "A", "B", "C", "D", "E", "F", "G", "H"]
+							option=__kat
+				.col-xs-3
+					input.unlock(type="number", name="Weihe.Liturgiekenntnis[{index}][wert]", min="3", max="35", step="1", value="3")
+		script(src="/edit-liturgie.js")
