moving custom css/js.

--- a/views/edit-held/basiswerte.jade
+++ b/views/edit-held/basiswerte.jade
@@ -5,7 +5,7 @@ html(lang="de")
 	head
 		include ../inc-bootstrap
 		title #{_Held.Person.Name.split(' ')[0]} bearbeiten – Basiswerte
-		link(rel="stylesheet", href="/dcm-display.css")
+		link(rel="stylesheet", href="/css/dcm-display.css")
 		style.
 			body {
 				padding-top:      60px;
