--- a/views/edit-held/kleidung.jade
+++ b/views/edit-held/kleidung.jade
@@ -5,7 +5,7 @@ html(lang="de")
 	head
 		include ../inc-bootstrap
 		title Rüstkammer
-		link(rel="stylesheet", href="/dcm-display.css")
+		link(rel="stylesheet", href="/css/dcm-display.css")
 		style.
 			input[type='number'] {
 				width: 				3em;
@@ -104,4 +104,4 @@ html(lang="de")
 										- counter += 1;
 						.row
 							.col-lg-12 &nbsp;
-			//script(src="/edit-kleidung.js")
+			//script(src="/js/edit-kleidung.js")
