--- a/views/edit-held/person.jade
+++ b/views/edit-held/person.jade
@@ -5,11 +5,7 @@ html(lang="de")
 	head
 		include ../inc-bootstrap
 		title #{_Held.Person.Name.split(' ')[0]} bearbeiten – Beschreibung
-		link(rel="stylesheet", href="/dcm-display.css")
-		style.
-			body {
-				padding-top:      60px;
-			}
+		link(rel="stylesheet", href="/css/dcm-display.css")
 	body#top
 		include inc/nav
 		header.container
