--- a/views/edit-held/sf.jade
+++ b/views/edit-held/sf.jade
@@ -20,7 +20,7 @@ html(lang="de")
 	head
 		include ../inc-bootstrap
 		title Sonderfertigkeiten hinzufügen
-		link(rel="stylesheet", href="/dcm-display.css")
+		link(rel="stylesheet", href="/css/dcm-display.css")
 		style.
 			body {
 				padding-top: 				60px;
@@ -238,7 +238,7 @@ html(lang="de")
 				#save.row.well
 					.col-xs-6.col-xs-offset-3.col-sm-4.col-sm-offset-4.text-center
 						button.btn.btn-success.form-control(type="submit", disabled) speichern
-		script(type="text/javascript", src="/vorteile.js")
+		script(type="text/javascript", src="/js/vorteile.js")
 		script.
 			$('#tab-header').on("click", "a", function (evt) {
 				evt.preventDefault();
