--- a/views/edit-held/talente.jade
+++ b/views/edit-held/talente.jade
@@ -33,7 +33,7 @@ html(lang="de")
 	head
 		include ../inc-bootstrap
 		title Talente
-		link(rel="stylesheet", href="/dcm-display.css")
+		link(rel="stylesheet", href="/css/dcm-display.css")
 		style.
 			input[type='number'] {
 				text-align: 		center;
@@ -214,4 +214,4 @@ html(lang="de")
 					.col-xs-6.col-xs-offset-3.col-sm-4.col-sm-offset-4.text-center
 						button.btn.btn-success.form-control(type="submit", disabled) speichern
 
-			script(src="/edit-talente.js")
+			script(src="/js/edit-talente.js")
