--- a/views/edit-held/waffen.jade
+++ b/views/edit-held/waffen.jade
@@ -5,7 +5,7 @@ html(lang="de")
 	head
 		include ../inc-bootstrap
 		title Waffenkammer
-		link(rel="stylesheet", href="/dcm-display.css")
+		link(rel="stylesheet", href="/css/dcm-display.css")
 		style.
 			body {
 				padding-top: 60px;
@@ -403,4 +403,4 @@ html(lang="de")
 						.col-xs-8.col-xs-offset-2.col-sm-6.col-sm-offset-3.col-md-4.col-md-offset-4.text-center
 							input(type="hidden", name="_method", value="delete")
 							button.btn.btn-danger.form-control(type="submit") alle Fernkampfwaffen löschen
-		script#save(src="/edit-waffen.js")
+		script#save(src="/js/edit-waffen.js")
