--- a/views/held/held.jade
+++ b/views/held/held.jade
@@ -508,4 +508,4 @@ html(lang="de")
 									.col-xs-10.col-sm-11.col-md-5=__item.Name
 									.col-xs-2.col-sm-1.hidden-md.hidden-lg(class=__item.Kommentar ? null : "hidden") &nbsp;
 									.col-xs-10.col-sm-11.col-md-6(class=__item.Kommentar ? null : "hidden")=__item.Kommentar
-		script(src="/held.js")
+		script(src="/js/held.js")
