--- a/views/held/inc-head.jade
+++ b/views/held/inc-head.jade
@@ -1,3 +1,3 @@
 include ../inc-bootstrap
 title DCM – #{_Held.Person.Name}
-link(rel="stylesheet", href="/dcm-display.css")
+link(rel="stylesheet", href="/css/dcm-display.css")
