--- a/views/system/db-upload.jade
+++ b/views/system/db-upload.jade
@@ -3,7 +3,7 @@ html(lang="de")
 	head
 		meta(charset="utf-8")
 		title DB-Upload
-		link(rel="stylesheet", type="text/css", href="/system-upload.css")
+		link(rel="stylesheet", type="text/css", href="/css/system-upload.css")
 	body
 		h2 DB-Daten (JSON) laden
 		ul
@@ -29,4 +29,4 @@ html(lang="de")
 				progress.hide(max="100")
 		p#success
 		p#error
-		script(src="/system-upload.js")
+		script(src="/js/system-upload.js")
