--- a/views/system/edit-variant.jade
+++ b/views/system/edit-variant.jade
@@ -3,7 +3,7 @@ html(lang="de")
 	head
 		meta(charset="utf-8")
 		title Zaubervariante bearbeiten
-		link(rel="stylesheet", type="text/css", href="/system-new.css")
+		link(rel="stylesheet", type="text/css", href="/css/system-new.css")
 		script(type="text/javascript", src="/jquery-2.0.3.min.js")
 	body
 		nav
