--- a/views/system/nav.jade
+++ b/views/system/nav.jade
@@ -3,7 +3,7 @@ html(lang="de")
 	head
 		meta(charset="utf-8")
 		title Startseite
-		link(rel="stylesheet", type="text/css", href="/system-upload.css")
+		link(rel="stylesheet", type="text/css", href="/css/system-upload.css")
 	body
 		#logout
 			a(href="/logout") abmelden
