--- a/views/system/new-ritual.jade
+++ b/views/system/new-ritual.jade
@@ -9,7 +9,7 @@ html(lang="de")
 	head
 		meta(charset="utf-8")
 		title Neues Ritual
-		link(rel="stylesheet", type="text/css", href="/system-new.css")
+		link(rel="stylesheet", type="text/css", href="/css/system-new.css")
 		script(src="/jquery-2.0.3.min.js")
 	body
 		#logout
@@ -104,4 +104,4 @@ html(lang="de")
 			fieldset.submitter.mitte
 				button(type="submit") speichern
 				button(type="reset") zurücksetzen
-		script(src="/system-ritual.js")
+		script(src="/js/system-ritual.js")
