--- a/views/system/new-variant.jade
+++ b/views/system/new-variant.jade
@@ -3,7 +3,7 @@ html(lang="de")
 	head
 		meta(charset="utf-8")
 		title Neue Zaubervariante
-		link(rel="stylesheet", type="text/css", href="/system-new.css")
+		link(rel="stylesheet", type="text/css", href="/css/system-new.css")
 	body
 		#logout
 			a(href="/logout") abmelden
