--- a/views/system/new-zauber.jade
+++ b/views/system/new-zauber.jade
@@ -9,7 +9,7 @@ html(lang="de")
 	head
 		meta(charset="utf-8")
 		title Neuer Zauberspruch
-		link(rel="stylesheet", type="text/css", href="/system-new.css")
+		link(rel="stylesheet", type="text/css", href="/css/system-new.css")
 	body
 		#logout
 			a(href="/logout") abmelden
