--- a/views/system/table-of-miracles.jade
+++ b/views/system/table-of-miracles.jade
@@ -3,7 +3,7 @@ html
 	head
 		meta(charset="utf-8")
 		title Liturgie-Übersicht
-		link(rel="stylesheet", type="text/css", href="/system-list.css")
+		link(rel="stylesheet", type="text/css", href="/css/system-list.css")
 	body
 		header
 			#logout
