--- a/views/system/table-of-rituals.jade
+++ b/views/system/table-of-rituals.jade
@@ -3,7 +3,7 @@ html(lang="de")
 	head
 		meta(charset="utf-8")
 		title Ritual-Übersicht
-		link(rel="stylesheet", type="text/css", href="/system-list.css")
+		link(rel="stylesheet", type="text/css", href="/css/system-list.css")
 		style.
 			th {
 				padding: 0.4em 0;
