--- a/views/system/table-of-spells.jade
+++ b/views/system/table-of-spells.jade
@@ -3,7 +3,7 @@ html(lang="de")
 	head
 		meta(charset="utf-8")
 		title Zauber-Übersicht
-		link(rel="stylesheet", type="text/css", href="/system-list.css")
+		link(rel="stylesheet", type="text/css", href="/css/system-list.css")
 		style.
 			td {
 				text-align: center;
