--- a/views/users/friends.jade
+++ b/views/users/friends.jade
@@ -107,4 +107,4 @@ html(lang="de")
 										span.input-group-btn
 											button.btn.btn-danger(type="button")
 												span.fa.fa-minus
-		script(src="/friendship.js")
+		script(src="/js/friendship.js")
