--- a/views/edit-held/attribute.jade
+++ b/views/edit-held/attribute.jade
@@ -5,7 +5,7 @@ html(lang="de")
 	head
 		include ../inc-bootstrap
 		title #{_Held.Person.Name.split(' ')[0]} bearbeiten – Attribute
-		link(rel="stylesheet", href="/dcm-display.css")
+		link(rel="stylesheet", href="/css/dcm-display.css")
 		style.
 			.dcm-gap-bottom {
 				margin-bottom:    1em;
