--- a/views/edit-held/new-char.jade
+++ b/views/edit-held/new-char.jade
@@ -1,16 +1,5 @@
 include ../inc-mixins
 
-mixin dropdown(__list, __prefix)
-	- var __lock = __prefix === null;
-	-   __prefix = __prefix || "";
-	each __val, __key in __list
-		if Array.isArray(__val)
-			- __prefix = __lock ? "" : __key+"/"
-			optgroup(label=__key)
-				+dropdown(__val, __prefix)
-		else
-			option(value=__prefix+__val)=__val
-
 - var counter = { count: 0, next: function() { return ++counter.count; } };
 
 mixin plainProCon(pro, x)
@@ -29,18 +18,11 @@ mixin stagedProCon(pro, x, opt)
 doctype html
 html(lang="de")
 	head
-		meta(charset="utf-8")
+		include ../inc-bootstrap
 		title Neuen Charakter anlegen
-		link(rel="stylesheet", href="//netdna.bootstrapcdn.com/bootswatch/3.1.1/spacelab/bootstrap.min.css")
-		link(rel="stylesheet", href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css")
-		link(rel="stylesheet", href="/dcm-display.css")
-		link(rel="stylesheet", href="/vorteile.css")
-		script(src="//code.jquery.com/jquery-2.1.0.min.js")
-		script(src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js")
+		link(rel="stylesheet", href="/css/dcm-display.css")
+		link(rel="stylesheet", href="/css/vorteile.css")
 		style.
-			body {
-				padding-top:      60px;
-			}
 			.dcm-gap-bottom {
 				margin-bottom:    1em;
 			}
@@ -1116,4 +1098,4 @@ html(lang="de")
 							button.form-control.btn.btn-success(type="submit", disabled) speichern
 						.col-sm-4.col-sm-offset-2
 							button.form-control.btn.btn-warning(type="reset") zurücksetzen
-		script(type="text/javascript", src="/vorteile.js")
+		script(type="text/javascript", src="/js/vorteile.js")
