--- a/views/edit-held/rucksack.jade
+++ b/views/edit-held/rucksack.jade
@@ -5,7 +5,7 @@ html(lang="de")
 	head
 		include ../inc-bootstrap
 		title #{_Held.Person.Name.split(' ')[0]} bearbeiten – Ausrüstung
-		link(rel="stylesheet", href="/dcm-display.css")
+		link(rel="stylesheet", href="/css/dcm-display.css")
 		style.
 			body {
 				padding-top:      60px;
@@ -70,4 +70,4 @@ html(lang="de")
 					.row.dcm-row
 						.col-xs-8.col-xs-offset-2.col-sm-4.col-sm-offset-4
 							button.btn.btn-danger.form-control(type="submit", disabled) alle Gegenstände löschen
-		script(src="/edit-rucksack.js")
+		script(src="/js/edit-rucksack.js")
