--- a/views/system/edit-talent.jade
+++ b/views/system/edit-talent.jade
@@ -10,7 +10,7 @@ html
 	head
 		meta(charset="utf-8")
 		title Talent bearbeiten
-		link(rel="stylesheet", type="text/css", href="/system-new.css")
+		link(rel="stylesheet", type="text/css", href="/css/system-new.css")
 		script(type="text/javascript", src="/jquery-2.0.3.min.js")
 	body
 		nav
