--- a/views/system/edit-zauber.jade
+++ b/views/system/edit-zauber.jade
@@ -9,7 +9,7 @@ html(lang="de")
 	head
 		meta(charset="utf-8")
 		title Zauberspruch bearbeiten
-		link(rel="stylesheet", type="text/css", href="/system-new.css")
+		link(rel="stylesheet", type="text/css", href="/css/system-new.css")
 		script(type="text/javascript", src="/jquery-2.0.3.min.js")
 	body
 		nav
