--- a/views/system/new-liturgie.jade
+++ b/views/system/new-liturgie.jade
@@ -3,8 +3,8 @@ html
 	head
 		meta(charset="utf-8")
 		title Neue Liturgie
-		link(rel="stylesheet", type="text/css", href="/dropout.css")
-		link(rel="stylesheet", type="text/css", href="/system-new.css")
+		link(rel="stylesheet", type="text/css", href="/css/dropout.css")
+		link(rel="stylesheet", type="text/css", href="/css/system-new.css")
 		script(type="text/javascript", src="/jquery-2.0.3.min.js")
 		style.
 			#gott button {
