--- a/views/system/new-talent.jade
+++ b/views/system/new-talent.jade
@@ -11,7 +11,7 @@ html
 		meta(charset="utf-8")
 		title Neues Talent
 		script(type="text/javascript", src="/jquery-2.0.3.min.js")
-		link(rel="stylesheet", type="text/css", href="/system-new.css")
+		link(rel="stylesheet", type="text/css", href="/css/system-new.css")
 	body
 		#logout
 			a(href="/logout") abmelden
