--- a/views/system/table-of-talents.jade
+++ b/views/system/table-of-talents.jade
@@ -3,7 +3,7 @@ html
 	head
 		meta(charset="utf-8")
 		title Talent-Übersicht
-		link(rel="stylesheet", type="text/css", href="/system-list.css")
+		link(rel="stylesheet", type="text/css", href="/css/system-list.css")
 		style.
 			td:nth-child(3), td:nth-child(4) {
 				text-align: center;
