--- a/views/edit-held/zauber.jade
+++ b/views/edit-held/zauber.jade
@@ -23,6 +23,54 @@ html(lang="de")
 			form(action="/zauber/"+_Held._id, method="post", accept-charset="utf-8")
 				input(type="hidden", name="_method", value="put")
 
+				section.panel.panel-default
+					.panel-heading.dcm-caption Zauber
+					ul.list-group
+						li.list-group-item.text-center
+							.row.dcm-row
+								.col-xs-11.col-xs-offset-1.col-sm-5
+									.dcm-header.dcm-border Zauber
+								.col-xs-3.col-xs-offset-1.col-sm-2.col-sm-offset-0
+									.dcm-header.dcm-border Rep.
+								.col-xs-4.col-sm-2
+									.dcm-header.dcm-border Lern
+								.col-xs-4.col-sm-2
+									.dcm-header.dcm-border ZfW
+					.panel-footer
+						#save.row
+							.col-xs-6.col-xs-offset-3.col-sm-4.col-sm-offset-4.text-center
+								button.btn.btn-success.form-control(type="submit", disabled) speichern
+
+			section.panel.panel-default
+				.panel-heading.dcm-caption Zauber hinzufügen
+				- var __heldReps = ["Mag"]
+				if Array.isArray(_Held.Magie.Repräsentation) && _Held.Magie.Repräsentation.length
+					- __heldReps = _Held.Magie.Repräsentation.map(function(item) { return item.short; })
+				ul.list-group.container-fluid.text-center
+					li.list-group-item
+						.row.dcm-row
+							.col-xs-10.col-xs-offset-2.col-sm-7.col-sm-offset-1.col-md-4
+								.dcm-header.dcm-border Zauber
+							.col-xs-5.col-xs-offset-2.col-sm-2.col-sm-offset-0.col-md-1
+								.dcm-header.dcm-border Kompl.
+							.col-xs-5.col-sm-2.col-md-1
+								.dcm-header.dcm-border Rep.
+							.col-xs-10.col-xs-offset-2.col-sm-11.col-sm-offset-1.col-md-5.col-md-offset-0
+								.dcm-header.dcm-border Merkmale
+					each __stdSpell in _Zauber
+						li.list-group-item
+							.row
+								.col-xs-2.col-sm-1
+									button.add.btn.btn-default.fa.fa-plus(type="button")
+									input.id(type="hidden", value=__stdSpell._id)
+								.col-xs-10.col-sm-7.col-md-4.text-left(title=__stdSpell.Probe.join(' · '))=__stdSpell.Name
+								.col-xs-5.col-sm-2.col-md-1=__stdSpell.Komplexität
+								.col-xs-5.col-sm-2.col-md-1
+									select(size="1")
+										each __rep in __stdSpell.Repräsentationen
+											option(value=__rep, selected=(__heldReps.indexOf(__rep) > -1))=__rep
+								.col-xs-10.col-xs-offset-2.col-sm-11.col-sm-offset-1.col-md-5.col-md-offset-0.text-left=__stdSpell.Merkmale.join(', ')
+
 		//-style.
 			#spell_choice tbody td:first-child {
 				padding-left: 0;
